fixes padding clipping in basic box

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
 /* DRAGON UI CORE STYLING */
 
 html {
-  background: whitesmoke;
+	background: whitesmoke;
 }
 
 .App {
-  display: grid;
-  grid-template-rows: 4em 1fr;
+	display: grid;
+	grid-template-rows: 4em 1fr;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
-input[type="number"] {
-  text-align: right;
-  font-size: 1.5em;
+input[type='number'] {
+	text-align: right;
+	font-size: 1.5em;
 }
 
 .min-margin {
-  margin: 3px 0px;
+	margin: 3px 0px;
 }
 
 /* MUI OVERRIDES */
 .App .MuiOutlinedInput-input {
-  padding: 18.5px 10px;
+	padding: 18.5px 8px;
 }
 
 .App .MuiFormHelperText-root {
-  margin: 0;
+	margin: 0;
 }
